--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.3.0",
+    "config": "^3.3.7",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "gitignore": "^0.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
   }
 }
