--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gitignore": "^0.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   }
 }
