--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # dependencies
 /node_modules
+/cofig/default.json
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
